<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".Model1_Audi">


    <LinearLayout
        android:id="@+id/containerECU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewModelEcu"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="1dp"
            android:background="@color/dark_blue"
            android:gravity="center"
            android:text="@string/renault_srs_spc560_can"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/container3"
            android:layout_width="wrap_content"
            android:layout_height="91dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_back_univ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_stroke_dark_red_press_white"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/dark_red"
                android:textSize="15sp" />


            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="219dp"
                android:layout_height="49dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/vprog" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/container4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textRenaultSpcIdent"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_stroke_dark_red_press_white"
                        android:gravity="center"
                        android:text="@string/Identification"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textRenaultSpcReadDtc"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_stroke_dark_red_press_white"
                        android:gravity="center"
                        android:text="@string/Read_DTC"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textRenaultSpcEraseDtc"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_stroke_dark_red_press_white"
                        android:gravity="center"
                        android:text="@string/Erase_DTC"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textRenaultSpcDataStream"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_stroke_dark_red_press_white"
                        android:gravity="center"
                        android:text="@string/Data_stream"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textRenaultSPC"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_stroke_dark_red_press_white"
                        android:gravity="center"
                        android:text="@string/Special_function"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textRenaultTEMIC"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_stroke_dark_red_press_white"
                        android:gravity="center"
                        android:text="@string/Erase_CRASH"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>